# error-extrapolation-6a30-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: experimental_design.tex  hardest_condition.tex  main_summary.tex  recovery.tex  slopes.tex
papers/: README.md
papers/pages/: 2104.02112_govreport_efficient_attentions_long_summarization_manifest.txt  2309.12455_longdocfactscore_long_document_factuality_manifest.txt  2310.00785_booookscore_book_length_summarization_manifest.txt  2511.07689_stress_testing_long_document_factuality_metrics_manifest.txt
results/: environment.json  task_summary.json  tasks.jsonl
results/evaluations/: descriptive_stats.json  high_budget_recovery.csv  length_slopes.csv  prediction_metrics.csv  prediction_metrics.jsonl  record_metrics.csv  record_metrics.jsonl  run_metrics.csv  run_metrics.jsonl  sensitivity_summary.json  spearman_by_run_metric.csv  (+1 more)
src/: analyze_results.py  error_experiment.py  recovery_check.py
(+50 files in other folders)
