[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "openai>=2.41.1",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pypdf>=6.13.2",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
